Must specify the gitlab registry

--- a/Ansible/roles/Install_Gitlab_Runner_Dockerized/tasks/main.yml
+++ b/Ansible/roles/Install_Gitlab_Runner_Dockerized/tasks/main.yml
@@ -20,7 +20,7 @@
 
 - name: Pull the gitlab image
   docker_image:
-    name: gitlab-runner:{{ gitlab_runner_version }}
+    name: gitlab/gitlab-runner:{{ gitlab_runner_version }}
     source: pull
 
 
@@ -29,7 +29,7 @@
 - name: Run the master redis container
   docker_container:
     name: "gitlab_runner"
-    image: gitlab-runner:{{ gitlab_runner_version }}
+    image: gitlab/gitlab-runner:{{ gitlab_runner_version }}
     restart_policy: unless-stopped
     state: started
     hostname: gitlab-runner
