--- a/Ansible/roles/Install_Gitlab_Server_Dockerized/tasks/main.yml
+++ b/Ansible/roles/Install_Gitlab_Server_Dockerized/tasks/main.yml
@@ -41,6 +41,7 @@
     image: gitlab/gitlab-ce:{{ gitlab_server_version }}
     restart_policy: unless-stopped
     state: started
+    privileged: true
     hostname: "{{ external_url }}"
     network_mode: host
     shm_size: '256m'
