The config address for runner was changed

--- a/Ansible/roles/Install_Gitlab_Runner_Dockerized/tasks/main.yml
+++ b/Ansible/roles/Install_Gitlab_Runner_Dockerized/tasks/main.yml
@@ -39,7 +39,7 @@
     network_mode: host
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
-      - /root/gitlab-runner/config:/etc/gitlab
+      - /root/gitlab-runner/config:/etc/gitlab-runner
       - /root/gitlab-runner/logs:/var/log/gitlab
       - /root/gitlab-runner/data:/var/opt/gitlab
 
